[PhysicalUEProxy] add ping task.
